# clearpath_robot

./: dependencies.repos
.github/workflows/: ci.yml
clearpath_diagnostics/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_generator_robot/: CHANGELOG.rst  package.xml
clearpath_generator_robot/clearpath_generator_robot/launch/: generator.py  sensors.py
clearpath_hardware_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_hardware_interfaces/clearpath_hardware_interfaces/battery_state/: battery.py  battery_state_estimator
clearpath_hardware_interfaces/src/a200/: hardware.cpp  hardware.xml  status.cpp
clearpath_hardware_interfaces/src/diff_drive/: hardware.cpp  hardware_interface.cpp
clearpath_hardware_interfaces/src/j100/: hardware.cpp  hardware.xml  hardware_interface.cpp
clearpath_hardware_interfaces/src/lighting/: color.cpp  lighting.cpp  main.cpp  sequence.cpp
clearpath_hardware_interfaces/src/puma/: hardware.cpp  hardware.xml  hardware_interface.cpp
clearpath_hardware_interfaces/src/w200/: hardware.cpp  hardware.xml  hardware_interface.cpp
clearpath_motor_drivers/puma_motor_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_motor_drivers/puma_motor_driver/include/puma_motor_driver/: can_proto.hpp  driver.hpp  multi_puma_node.hpp
clearpath_motor_drivers/puma_motor_driver/src/: driver.cpp  multi_puma_node.cpp
clearpath_robot/: CHANGELOG.rst  package.xml
clearpath_robot/scripts/: generate  install
clearpath_robot/services/: clearpath-vcan.service
clearpath_sensors/: CHANGELOG.rst  package.xml
(+32 files in other folders)
