<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puma_motor_driver</name>
  <version>1.1.0</version>
  <description>Motor driver for Puma motor control board that utilizes ROS 2 Socketcan Gateway</description>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <license>BSD-3-Clause</license>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>can_msgs</depend>
  <depend version_gte="1.0.1">clearpath_motor_msgs</depend>
  <depend version_gte="1.0.0">clearpath_ros2_socketcan_interface</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
